--- a/css/styles.css
+++ b/css/styles.css
@@ -29,7 +29,8 @@ a {
 */
 main {
     max-width: 1200px;
-    margin: auto;
+    margin: 0 auto;
+
 }
 body{
 /*configuración general SC*/
@@ -39,17 +40,40 @@ font-size: 18px;
 line-height: 1.2;
 padding-top: 90px;/*tengo que seguir ajustando este parámetro*/
 min-height: 100vh;
+width: 100%;
+max-width: 1200px;
+}
+/*-wrapper*/
+.contenedor-header{
+width: 100vw;
+
 }
 
-.menu {
-    display: flex;
-    align-items: center;
+header {
+    display: flexbox;
     height: 90px;/*alto de sección SC*/
     /*Fijando header SC*/
     width: 100%;/* hacemos que el header ocupe el ancho completo de la página */
 	left: 0; /* Posicionamos el header al lado izquierdo */
 	top: 0; /* Posicionamos el header pegado arriba */
 	position: fixed; /* Hacemos que el header tenga una posición fija */
+    background-color: #fbfbfb;
+    width: 100vw;
+    max-width: 1200px;
+}
+.nav{
+    display: flex;
+    justify-content: space-between;
+    padding: 2em;
+   
+}
+.menu-lista{
+    display: flex;
+    justify-content:flex-end;
+    width: 100%;
+}
+.menu-lista a{
+    color: #af599e;
 }
 .hr{
     height: 20px;
@@ -62,22 +86,29 @@ min-height: 100vh;
 }
 ul li{
     display: inline-block;
-    justify-content: space-around;
+    justify-content: space-between;
+    margin-inline: 1rem;
+}
+.logo{
 }
 .img-logo{
-    display: flex;
-    align-items: start;
+    margin-top: -25px;
     width: 50px;
     height: 50px;
-	padding: 15px 0 0 20px;
-	text-decoration: none;
+    border:2px solid #c5d4df;
+
+}
+span{
+    color: #7298ac;
 }
 
 .img-foto{
     width: 400px;
+    max-width: 100%;
 	height: 400px;
     border-radius: 100%;
     padding: 2rem 2rem;
+    object-fit: cover;
 }
 .inicio-div{
     text-align:center;
@@ -142,14 +173,57 @@ p{
     margin-bottom: 2rem;
 
 }
-
-    footer{
+    
+footer{
       background-color: #af599e;/*color fondo sección SC*/
       color:  #fbfbfb;/*color texto SC*/
       height: 90px;/*alto de sección SC*/
       text-align: center;
       padding: 20px;
       margin-top: 40px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
+    @media (max-width:700px) {
+        main{
+            display: flex;
+            flex-direction: column;
+            width: 100%;
+            max-width: 100%;
+            min-height: 100vh;
+        }
+        body{
+            width: 100%;
+            max-width: 100%;
+            min-height: 100vh;
+
+        }
+        .img-foto{
+            border-radius: 100%;
+            padding: 2rem 2rem;
+            object-fit: cover;
+            min-height: 100vw;
+        }
+
+    }
+
+    @media (max-width:900px) {
+        main{
+            display: flex;
+            flex-direction: column;
+            width: 100%;
+            max-width: 100%;
+            min-height: 100vh;
+        }
+        body{
+            width: 100%;
+            max-width: 100%;
+            min-height: 100vh;
+
+        }
+
     }
 /* Recomendaciones! 
 *  - Comenzar desde lo más general y luego ir hacia lo mas específico, asignando primero
